@@ -36,3 +36,4 @@ Brett Nash <nash@nash.id.au>
 Mike Blumenkrantz <mike@zentific.com>
 Leif Middelschulte <leif.middelschulte@gmail.com>
 Mike McCormack <mj.mccormack@samsung.com>
+Sangho Park <gouache95@gmail.com>
